// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the Expense summary component with 1 expense 1`] = `
<div>
  <h1>
    There are 
    1
     
    expenses
     totaling: 
    $3,000.00
  </h1>
</div>
`;

exports[`Should render the expense summary with multiple expenses 1`] = `
<div>
  <h1>
    There are 
    3
     
    expenses
     totaling: 
    $120,000.00
  </h1>
</div>
`;
